--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,12 +7,19 @@
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="19" />
-
+	<!-- camera permission -->
+	<uses-permission android:name="android.permission.CAMERA" />
+	<uses-feature android:name="android.hardware.camera" />
+	<uses-feature android:name="android.hardware.camera.autofocus" />
+	
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" 
+        android:screenOrientation="landscape"
+        >
+        
         <activity
             android:name="com.example.imonitor.MainActivity"
             android:label="@string/app_name" >
@@ -23,5 +30,5 @@
             </intent-filter>
         </activity>
     </application>
-
+	
 </manifest>
