--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,20 +7,19 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
-	<!-- camera permission -->
-	
-	<uses-permission android:name="android.permission.CAMERA" />
-	<uses-feature android:name="android.hardware.camera" />
-	<uses-feature android:name="android.hardware.camera.autofocus" />
-	
+    <!-- camera permission -->
+
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" 
         android:screenOrientation="landscape"
-        >
-        
+        android:theme="@style/AppTheme" >
         <activity
             android:name="com.example.imonitor.LoginActivity"
             android:label="@string/app_name"
@@ -35,6 +34,11 @@
             android:name="com.example.imonitor.MainActivity"
             android:label="@string/app_name" >
         </activity>
+        <activity
+            android:name="com.example.imonitor.RegisterActivity"
+            android:label="@string/title_activity_register"
+            android:windowSoftInputMode="adjustResize|stateVisible" >
+        </activity>
     </application>
-	
+
 </manifest>
