--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,13 +7,37 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
+
     <!-- camera permission -->
+	<uses-permission android:name="android.permission.CAMERA" />
+	<uses-feature android:name="android.hardware.camera" />
+	<uses-feature android:name="android.hardware.camera.autofocus" />
+	<uses-permission android:name="android.permission.VIBRATE"/>
+  	<uses-permission android:name="android.permission.FLASHLIGHT"/>
+	
+	<!-- store datas -->
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	
+	<!-- video, audio -->
+	<uses-permission android:name="android.permission.RECORD_VIDEO"/>
+	<uses-permission android:name="android.permission.RECORD_AUDIO"/>
 
-    <uses-permission android:name="android.permission.CAMERA" />
 
-    <uses-feature android:name="android.hardware.camera" />
-    <uses-feature android:name="android.hardware.camera.autofocus" />
-
+	<!-- net -->
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+	<!-- wifi -->
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>  
+	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE"></uses-permission>  
+	<uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission> 
+	 
+	<!-- read state -->
+	<uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
+	
+	<!-- background process -->
+	<uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES"/>
+	
+	
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -34,6 +58,15 @@
             android:name="com.example.imonitor.MainActivity"
             android:label="@string/app_name" >
         </activity>
+        <activity
+            android:name="com.example.imonitor.AddCollectionActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity android:name=".CaptureActivity"
+			android:screenOrientation="landscape" android:configChanges="orientation|keyboardHidden"
+			android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+			android:windowSoftInputMode="stateAlwaysHidden">
+		</activity>
         <activity
             android:name="com.example.imonitor.RegisterActivity"
             android:label="@string/title_activity_register"
